00 QueryRevisionById use case + tests